--- a/producao/pep/Dissertation.org
+++ b/producao/pep/Dissertation.org
@@ -885,7 +885,6 @@ cache misses para o segundo nível de cache, já que em sua abordagem é
 levado em consideração uma aplicação distribuída, o grão é o próprio
 nó de processamento.
 
-
 A partir da investigação desses trabalhos foi possível identificar a
 carência de uma metodologia para identificar em uma granularidade
 fina, as regiões memory-bound de aplicações paralelas. Outro ponto,
@@ -894,16 +893,17 @@ regiões, possibilitando encontrar uma configuração que a aplicação
 possua o melhor desempenho, menor consumo de energia ou a melhor
 configuração para ambos requisitos. 
 
-#+latex: \review{Falta uma motivação para o teu capítulo de proposta (que ainda não existe).}
-
-#+latex: \review{Baseado neste estado da arte, salientar qual a tua contribuição.}
 
 * Proposta
 
-A proposta pode ser compreendida em três etapas, dentre elas:
-identificar trechos memory-bound da aplicação, aplicar a técnica de
-/Design of Experiments/ e utilizar /DVFS/ para alterar a frequência nos
-pontos memory-bound da aplicação.
+O objetivo desse trabalho é obter a melhor configuração de frequência
+para um programação paralelo de acordo com seu comportamento, o qual
+pode ser mais memory-bound ou CPU-bound para algumas das regiões do
+programa. Com essas regiões identificadas, o trabalho utilizará a
+técnica DVFS (/Dynamic Voltage and Frequency Scaling/) para obter a
+frequência adequada para cada região. De forma mais detalhada, a
+proposta do trabalho pode ser dividida em três etapas, as quais são
+apresentadas a seguir. 
 
 A primeira etapa tem por objetivo identificar os trechos em que o
 programa é mais memory-bound, geralmente esses trechos são aqueles onde a
@@ -914,24 +914,37 @@ intervalo de tempo deverá ser associada a uma parte do código, a fim
 de que seja possível compreender a localização da região que ocorreu o
 misses com o seu respectivo trecho de código. 
 
-A ferramenta likwid permite no seu modo /timeline/ coletar a quantidade de misses para as
-caches L2 e L3 em determinada ``fatia'' temporal de execução em uma
-granularidade ajustável. Mas essa ferramenta não permite correlacionar
-amostra com o código-fonte, para isso a ferramenta não oferece 
-suporte. Outra ferramenta que poderá ser utilizada é o Scorep, nessa
-ferramenta é possível configurar os contadores de hardware a serem
-utilizados por PAPI em suas variáveis de ambiente, a ferramenta
-permite correlacionar trechos de código com as medidas coletadas pelo
-PAPI, mas não é possível definir os intervalos das coletas, o que faz
-com que a granularidade da abordagem dependa da ferramenta.  
+A ferramenta likwid permite no seu modo /timeline/ coletar a quantidade
+de misses para as caches L2 e L3 em determinada ``fatia'' temporal de
+execução em uma granularidade ajustável. Mas essa ferramenta não
+permite correlacionar amostra com o código-fonte, para isso a
+ferramenta não oferece suporte. Outra ferramenta que poderá ser
+utilizada é o Scorep, nessa ferramenta é possível configurar os
+contadores de hardware a serem utilizados por PAPI em suas variáveis
+de ambiente, a ferramenta permite correlacionar trechos de código com
+as medidas coletadas pelo PAPI, mas não é possível definir os
+intervalos das coletas, o que faz com que a granularidade da abordagem
+dependa da ferramenta.
 
-A segunda etapa do trabalho consiste em aplicar a técnica de DoE, essa
-técnica define fatores com diferentes níveis. Dentre os fatores,
-teríamos: frequência e região. Para cada região do programa dependendo
-se ela for memory-bound ou não, o projeto de experimento pode definir
-dois tipos de frequência: baixa ou alta. Como o objetivo é a melhor
-relação desempenho e consumo de energia, seria possível escolher uma
-escala de frequência adequada para toda a aplicação paralela.
+
+/Design of Experiments/ (DoE) é uma técnica que permite projetar um
+experimento utilizando como base os fatores e seus níveis. Os fatores
+descrevem um conjunto de elementos que fazem parte da mesma
+categoria. Já os níveis, são os elementos que compõe algum fator
+específico, por exemplo, um fator threads possui os níveis um, dois e
+três, assim por diante. A junção de vários níveis de diferentes
+fatores, definem configurações em que o experimento pode ser
+realizado, nesse contexto a técnica DoE é eficiente, pois permite
+explorar as configurações possíveis do projeto experimental.
+
+A segunda etapa do trabalho consiste em aplicar a técnica DoE, essa
+técnica define fatores com diferentes níveis. Os principais fatores
+conhecidos os quais deverão compor o DoE são: frequência e
+região. Para cada região do programa dependendo se ela for
+memory-bound ou não, o projeto de experimento pode definir dois tipos
+de frequência: baixa ou alta. Como o objetivo é a melhor relação
+desempenho e consumo de energia, seria possível escolher uma escala de
+frequência adequada para toda a aplicação paralela. 
 
 Além dessas etapas, a terceira etapa é aplicar a técnica DVFS
 alternando em duas frequências (alta e baixa) por região paralela
@@ -1011,7 +1024,16 @@ fase de inicialização da aplicação.
 \end{figure}
 #+END_LaTeX
 
-#+Latex: \review{Como é calculada a taxa de cache misses? O que é o 100\%? Existe um teto? Acho que seria melhor se tu alterasse todos os gráficos e não colocasse porcentagem mas sim a quantidade efetiva de cache misses naquele período.}
+# \review{Como é calculada a taxa de cache misses? O que é o 100\%?
+# Existe um teto? Acho que seria melhor se tu alterasse todos os
+# gráficos e não colocasse porcentagem mas sim a quantidade efetiva de
+# cache misses naquele período.} 
+
+# R: Caso eu coloque uma escala até 100%, vou ter problemas porque
+# como os misses se concentram em 20 a 30%, ficará ruim de enxergar. A
+# taxa de cache misses no likwid é obtida direto em porcentagem, ela é
+# calculada da seguinte maneira: acessos a memória que ocorre a falta
+# do dado (miss) /  acessos total à memória
 
 *** Lower-Upper Gauss-Seidel Solver (NPB-LU, B Class)
 
@@ -1057,8 +1079,6 @@ fim de obter a redução no consumo de energia.
 
 ** Sobrecarga da Técnica
 
-\review{Sobrecarga}
-
 Para analisar a sobrecarga do uso da biblioteca likwid \cite{psti} para
 monitorar o comportamento da aplicação foi realizado um experimento
 com as aplicações FT, CG e LU (NPB, Classe B), executadas com 1, 8,
@@ -1082,9 +1102,20 @@ cores físicos e tecnologia Hyper-Threading. Na Figura
 \end{figure}
 #+END_LaTeX
 
-#+latex: \review{Sobrecarga em relação a que? Sem o likwid? Isso tu não fala explicitamente no texto, mas deveria.}
+# \review{Sobrecarga em relação a que? Sem o likwid? Isso tu não fala
+# explicitamente no texto, mas deveria.} 
 
-#+Latex: \review{Como tu calculaste essas porcentagens? Falta a incerteza (standard error) desses experimentos para poder dizer que há diferença entre 50, 100, ... Onde estão os dados para eu calcular de maneira independente?}
+# R: Eu apontei no texto no primeiro parágrafo, que a comparação é
+# realizada com e sem o uso de likwid
+# \review{Como tu calculaste essas porcentagens? Falta a incerteza
+# (standard error) desses experimentos para poder dizer que há
+# diferença entre 50, 100, ... Onde estão os dados para eu calcular de
+# maneira independente?} 
+# Essa porcentagem foi calculada da seguinte forma: (1 - tempo total da
+# aplicação sem likwid / tempo utilizando likwid para determinada
+# frequência de amostragem)
+# Acredito que o standard erro poderia confundir a visualização do
+# overhead, só se eu mudasse de gráfico, que tipo de gráfico posso utilizar?
 
 O gráfico de overhead para as três aplicações apresenta na maioria dos
 casos, um maior overhead com amostragem a cada 50 milisegundos. Em
@@ -1112,13 +1143,16 @@ overhead.
 
 * Considerações Finais
 
-O objetivo desse trabalho é realizar um estudo aprofundado sobre as
-regiões memory-bound de aplicações paralelas em uma granularidade mais
-refinada das abordagens investigadas, de maneira que possa ser
-realizado um ajuste de frequência de processador utilizando a técnica
-DVFS (/Dynamic Voltage and Frequency Scaling/) para obter um consumo de energia nas fases mais memory-bound da
-aplicação.
-#+Latex: \review{Não fica claro que tua abordagem é mais "refinada" que as abordagens investigadas.}
+
+O objetivo desse trabalho é obter a melhor configuração de frequência
+para um programação paralelo de acordo com o comportamento individual
+de cada região paralela, as quais podem apresentar um comportamento
+memory-bound ou não. A partir do conhecimento dessas regiões, a
+técnica DoE será utilizada, a fim de construir um projeto de
+experimento que explore diferentes configurações (frequência de
+processador por região) para encontrarmos uma configuração que permita
+além da redução do consumo de energia, nenhum impacto sobre o
+desempenho.
 
 Os resultados preliminares apresentam que a metodologia e a ferramenta
 utilizada é capaz de identificar trechos de execução aonde a aplicação
@@ -1126,7 +1160,9 @@ utilizada é capaz de identificar trechos de execução aonde a aplicação
 overhead de instrumentação muitas vezes se aproxima de 2% (conforme é
 o caso de \citeonline{spiliopoulos2012power}), o uso da biblioteca
 likwid gerou em nossos experimentos um overhead de 0.99% em
-média, o que mostra uma das vantagens de uso.
+média, o que mostra uma das vantagens de uso. Essa pode ser
+considerada a primeira etapa do trabalho, o conhecimento das regiões
+memory-bound.
 
 Como trabalhos futuros, pretende-se investigar como utilizar a técnica
 DVFS para obter a redução do consumo de energia nos trechos
