--- a/LabBook.org
+++ b/LabBook.org
@@ -4520,6 +4520,8 @@ SCOREP_FILTERING_FILE=/home/gabrielbmoro/src/bestSolution/filter_timestemp \
 
 * [18:36:44; 28.10.2016] Experimento de Energia com Graph500 com algumas políticas do CPUFreq :Gabriel:
 
+- Script para gerar o design do experimento: 
+
 #+begin_src R :results output :session *RpjectD* :exports both 
 require(DoE.base);
   expGraph500Governors <- fac.design (
@@ -4563,6 +4565,55 @@ The following object is masked from ‘package:base’:
     lengths
  creating full factorial with 6 runs ...
 #+end_example
+
+
+#+begin_src sh :results output :exports both :tangle dados/scriptGraph500exp1ComDVFS.bash
+#!bin/bash
+
+nameFile="/home/gabrielbmoro/dissertacao_gbmoro/dados/expGraph500Governors.csv"
+pathOfApps="/home/gabrielbmoro/Programs/graph500/omp-csr/omp-csr"
+pcm_path="/home/gabrielbmoro/Programs/IntelPerformanceCounterMonitor-V2.11/pcm.x"
+outputFile="../dados/ResultExpGraph500_diferentesGovernors.csv"
+numberOfCpus=32
+c=0
+ref=$(cat $nameFile)
+
+tmp=""
+
+i=0
+
+for row in ${ref[@]}; do
+   if [ $i -gt 0 ]; then		
+         name=$(echo "$row" | cut -d ',' -f1)
+	   runId=$(echo "$row" | cut -d ',' -f2)
+         runNumber=$(echo "$row" | cut -d ',' -f3)
+	   runStd=$(echo "$row" | cut -d ',' -f4)
+	   governors=$(echo "$row" | cut -d ',' -f5 | sed 's/"//g')
+	   threads=$(echo "$row" | cut -d ',' -f6 | sed 's/"//g')
+
+	   while [ $c -lt $numberOfCpus ]; do 
+			echo -n "$governors" > "/sys/devices/system/cpu/cpu$c/cpufreq/scaling_governor"
+			let c=$c+1
+	   done
+	   c=0
+	   
+         #definindo o número de threads e pinando-as em um core específico
+	   export OMP_NUM_THREADS=$threads
+	   export GOMP_CPU_AFFINITY="0-$threadNumber"
+
+	   sudo -E $pcm_path  --noJKTWA -r --external-program $pathOfApps -s 23 >> tmp.log
+	   cpuEnergy=$(cat tmp.log | awk ' { print $4 } ' | tail -n 1)
+		
+	   timeSeconds=$($pathOfApps -s 23 | grep -i mean_time: | awk ' { print $2 } ' )
+		
+	   echo "$name,$runId,$runNumber,$runStd,$governors,$threads,$cpuEnergy,$timeSeconds" >> $outputFile
+	else
+		echo $row >> $outputFile
+		let i=$i+1
+	fi
+done
+
+#+end_src
 
 * Dealing with ScoreP traces
 ** Fibonacci in OpenMP                                      :openmp:tracing:
